--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     </head>
     <body>
 
-        <img class="card" onclick="clickCard(this)"></img>
-        <img class="card" onclick="clickCard(this)"></img>
-        <img class="card" onclick="clickCard(this)"></img>
+        <div id='cards-container'>
+            <img class="card" onclick="clickCard(this)"></img>
+            <img class="card" onclick="clickCard(this)"></img>
+            <img class="card" onclick="clickCard(this)"></img>
+        </div>
+
+        <div id="message"></div>
 
         <script src="index.js" async defer></script>
     </body>
